--- a/ex1.html
+++ b/ex1.html
@@ -90,6 +90,19 @@
     </form>
   </div>
   <div id="output">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">ชื่อ</th>
+          <th scope="col">รหัส</th>
+          <th scope="col">เพศ</th>
+        </tr>
+      </thead>
+      <tbody id="inputTable">
+
+      </tbody>
+    </table>
 
   </div>
 
