--- a/ex1.html
+++ b/ex1.html
@@ -96,7 +96,7 @@
           <th scope="col">#</th>
           <th scope="col">ชื่อ</th>
           <th scope="col">รหัส</th>
-          <th scope="col">เพศ</th>
+          <th scope="col">GPA</th>
         </tr>
       </thead>
       <tbody id="inputTable">
