--- a/ex1.html
+++ b/ex1.html
@@ -103,7 +103,34 @@
 
       </tbody>
     </table>
+  </div>
+  <div id="sinigle_student_result" class="px-3 m-5">
+    <div class="row">
+      <div class="col-3"><b>Id:</b></div>
+      <div class="col-3" id="id">id</div>
+    </div>
 
+    <div class="row">
+      <div class="col-3"><b>Student id:</b></div>
+      <div class="col-3" id="studentId">id</div>
+    </div>
+
+    <div class="row">
+      <div class="col-3"><b>Name:</b></div>
+      <div class="col-3" id="name">name and surname</div>
+    </div>
+
+    <div class="row">
+      <div class="col-3"><b>GPA:</b></div>
+      <div class="col-3" id="gpa">gpa</div>
+    </div>
+
+    <div class="row">
+      <div class="col-3"><b>Id:</b></div>
+      <div class="col">
+        <img alt="default image" id="image" />
+      </div>
+    </div>
   </div>
 
   <!-- Optional JavaScript; choose one of the two! -->
