--- a/ex1.html
+++ b/ex1.html
@@ -13,7 +13,7 @@
   <title>Hello, world!</title>
 </head>
 
-<body onload="onload()">
+<body>
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
@@ -32,7 +32,7 @@
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
         <input type="search" class="form-control" placeholder="Search..." aria-label="Search" id="inputText">
       </form>
-      <button type="button" class="btn btn-light text-dark me-2" id="searchButton">Login</button>
+      <button type="button" class="btn btn-light text-dark me-2" id="searchButton">Search</button>
       <button type="button" class="btn btn-primary">
         กดมาแล้ว <span class="badge bg-danger" id="count">0</span>
         <span class="visually-hidden">unread messages</span>
