--- a/ex1.html
+++ b/ex1.html
@@ -97,6 +97,7 @@
           <th scope="col">ชื่อ</th>
           <th scope="col">รหัส</th>
           <th scope="col">GPA</th>
+          <th scope="col">ลบ</th>
         </tr>
       </thead>
       <tbody id="inputTable">
@@ -129,8 +130,33 @@
       </div>
     </div>
   </div>
-
-  <!-- Optional JavaScript; choose one of the two! -->
+  <div class="d-flex justify-content-center my-3">
+    <form class="row gy-2 gx-3 align-items-center">
+      <div class="form-floating">
+        <input type="text" class="form-control" id="nameInput" placeholder="ชื่อ">
+        <label for="nameInput">Name</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="surnameInput" placeholder="นามสกุล">
+        <label for="surnameInput">Surname</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="studentIdInput" placeholder="รหัสศึกษา">
+        <label for="studentIdInput">รหัสศึกษา</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="gpaInput" placeholder="gpa">
+        <label for="gpaInput">GPA</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" class="form-control" id="imageLinkInput" placeholder="image Link">
+        <label for="imageLinkInput">Link รูป</label>
+      </div>
+      <div class="col-auto">
+        <button type="button" class="btn btn-primary" id="addButton" onclick="onAddStudentClick()">Submit</button>
+      </div>
+    </form>
+  </div> <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
