--- a/ex1.html
+++ b/ex1.html
@@ -23,9 +23,9 @@
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
+        <li><a href="#" class="nav-link px-2 link-secondary" id="allStudentMenu">รายชื่อทั้งหมด</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark" id="searchMenu">ค้นหา</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark" id="addStudentMenu">เพิ่มนักศึกษา</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
       </ul>
 
